refactor: use ProcessBuilder for metadata command
For some reason, using ProcessBuilder doesn't work for the periodical output